--- a/vidindex.html
+++ b/vidindex.html
@@ -37,7 +37,7 @@
             <a-assets>
                 <video
                     id="vid"
-                    src="assets/asset.mp4"
+                    src="assets/vidasset.mp4"
                     preload="auto"
                     response-type="arraybuffer"
                     loop
@@ -52,7 +52,7 @@
             <a-marker
                 type="pattern"
                 preset="custom"
-                url="assets/marker.patt"
+                url="assets/pattern-murcat.patt"
                 videohandler
                 smooth="true"
                 smoothCount="10"
@@ -65,7 +65,7 @@
             >
                 <a-video
                     src="#vid"
-                    scale="1 1 1"
+                    scale="1.6 0.9 1"
                     position="0 0.1 0"
                     rotation="-90 0 0"
                     class="clickable"
